kubernetes/aws-load-balancer-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-load-balancer-controller
  namespace: kube-system
  labels:
    app.kubernetes.io/name: aws-load-balancer-controller
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: aws-load-balancer-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: aws-load-balancer-controller
    spec:
      serviceAccountName: aws-load-balancer-controller
      securityContext:
        fsGroup: 65534
      containers:
      - name: controller
        image: public.ecr.aws/eks/aws-load-balancer-controller:v2.8.1
        args:
        - --cluster-name=cs3-employee-platform
        - --ingress-class=alb
        - --aws-region=eu-central-1
        - --aws-vpc-id=vpc-072a8b181a467d24b
        ports:
        - name: webhook-server
          containerPort: 9443
        - name: metrics-server
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /healthz
            port: 61779
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /readyz
            port: 61779
          initialDelaySeconds: 10
          periodSeconds: 10
        resources:
          limits:
            cpu: 200m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 200Mi
